# FMMLoader-26

./: .editorconfig  .eslinctrc.cjs  .eslintignore  .gitignore  .gitmodules  .prettierignore  AGENTS.md  BUILD.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CONTRIBUTING.md  CROWDIN_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINTING.md  MIGRATION.md  PLATFORM_SUPPORT.md  README.md  SECURITY.md  SECURITY_REVIEW.md  UPDATER.md  build-local.bat  build-local.sh  crowdin.yml  eslint.config.js  fm26_mod_manager.spec  index.html  manifest.schema.json  package-lock.json  package.json  pnpm-lock.yaml  privacy.md  readme.md  tailwind.config.js  testing.md  vite.config.ts
.aicontext/: AI_GITMCP_INTEGRATION.md  AI_MCP_INSTRUCTIONS.md  AI_README.md  AI_WORKFLOW_TASKS.md  CODESTYLE.md  CONTEXT_COMPACTION.md  MCP_SERVERS.md  TASK_TEMPLATE.md
.claude/: settings.local.json
.clavix/: INSTRUCTIONS.md  config.json
.github/: BRANCH_PROTECTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions 2.md  copilot-instructions.md  crowdin.yml  dependabot.yml  modders.md  readme.md  release-drafter.yml  release.yml
.husky/: pre-push
aicontext/: ASSET_ROUTING_SPEC.md  TAURI_PLUGIN_STRATEGY.md
locales/: app.yml  de.yml  en-GB.yml  en.yml  it.yml  ko.yml  nl.yml  pt-PT.yml  tr.yml
scripts/: build-local.bat  build-local.sh  generate-i18n-config.ts  generate-locales.ts
sessions/: sessions-config.json
src/: App.tsx  index.css  (+5 more)
src-tauri/: Cargo.toml  clippy.toml  entitlements.plist  rustfmt.toml  tauri.conf.json  tauri.conf.nosign.json
src-tauri/capabilities/: default.json  macos.json
src-tauri/icons/: create-icons.sh
src-tauri/src/: config.rs  conflicts.rs  game_detection.rs  graphics.rs  graphics_analyzer.rs  import.rs  lib.rs  logging.rs  main.rs  messages.rs  mod_manager.rs  name_fix.rs  restore.rs  types.rs  updater.rs  utils.rs
src-tauri/src/name_fix/: backup.rs  db.rs  import.rs  install.rs  mod.rs
(+103 files in other folders)
